working with view

--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,4 +1,4 @@
-<div class="todos" *ngFor="let todo of todos; let i = index; ">
+<div class="todos" *ngFor="let todo of todos; let i = index;" class = "todo{{ (todo.completed ? 'done' : ' ' )}} ">
     <div class="todo">
         <div class="id">{{i}}</div>
         <div class="content">{{todo.content}}</div>
