--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,7 +1,7 @@
 <div class="todos" *ngFor="let todo of todos; let i = index;" class = "todo{{ (todo.completed ? 'done' : ' ' )}} ">
     <div class="todo">
         <div class="id">{{i}}</div>
-        <div class="content">{{todo.content}}</div>
-        <button class="delete">Remove</button>
+        <div class="content" (click)="toggleDone(i)">{{todo.content}}</div>
+        <button class="delete" (click)="deleteTodo(i)">Remove</button>
     </div>
 </div>
